mongodb provider added & vsconfig added
